--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  prepare-dist:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,3 +33,34 @@ jobs:
         run: |
           echo "📏 dist 总大小如下："
           du -sh dist
+
+      - name: Upload dist artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-folder
+          path: dist/
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: prepare-dist
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Download dist artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-folder
+          path: dist/
+
+      - name: Show full project directory structure
+        run: |
+          echo "📁 当前工作目录结构："
+          tree -L 1
+
+      - name: Build Docker image
+        run: docker build -t my-app:latest .
+
+      - name: List Docker images
+        run: docker images
