feat:scp docker and run docker in action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,25 +88,25 @@ jobs:
       - name: List top level to confirm tar exists
         run: ls -lh
 
-      # - name: Copy image to remote server
-      #   uses: appleboy/scp-action@v0.1.7
-      #   with:
-      #     host: ${{ secrets.REMOTE_HOST }}
-      #     username: ${{ secrets.REMOTE_USER }}
-      #     key: ${{ secrets.REMOTE_SSH_KEY }}
-      #     port: ${{ secrets.REMOTE_PORT || 22 }}
-      #     source: "my-app.tar"
-      #     target: "~/"
+      - name: Copy image to remote server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          password: ${{ secrets.REMOTE_PASSWORD }}
+          port: 22
+          source: 'ewm-designer.tar'
+          target: '~/'
 
-      # - name: Load and run Docker image on remote server
-      #   uses: appleboy/ssh-action@v1.0.0
-      #   with:
-      #     host: ${{ secrets.REMOTE_HOST }}
-      #     username: ${{ secrets.REMOTE_USER }}
-      #     key: ${{ secrets.REMOTE_SSH_KEY }}
-      #     port: ${{ secrets.REMOTE_PORT || 22 }}
-      #     script: |
-      #       docker load -i ~/my-app.tar
-      #       docker stop my-app || true
-      #       docker rm my-app || true
-      #       docker run -d -p 8686:8686 --name my-app my-app:latest
+      - name: Load and run Docker image on remote server
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          password: ${{ secrets.REMOTE_PASSWORD }}
+          port: 22
+          script: |
+            docker load -i ~/ewm-designer.tar
+            docker stop ewm-designer-app || true
+            docker rm ewm-designer-app || true
+            docker run -d -p 8686:8686 --name ewm-designer-app ewm-designer:latest
