feat:add gzip in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,8 @@ http {
   default_type application/octet-stream;
 
   sendfile on;
+  gzip on;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
   server {
     listen 8686;
