--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "qs": "^6.13.1",
     "tdesign-icons-vue-next": "^0.3.3",
     "tdesign-vue-next": "^1.11.3",
+    "tracking-sdk": "^1.0.3",
     "tvision-color": "^1.6.0",
     "vite-plugin-mock": "^2.9.8",
     "vue": "^3.5.0",
