--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tdesign-vue-next": "^1.11.3",
     "tracking-sdk": "^1.0.3",
     "tvision-color": "^1.6.0",
+    "uuid": "^11.1.0",
     "vite-plugin-mock": "^2.9.8",
     "vue": "^3.5.0",
     "vue-i18n": "^9.9.1",
