--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev:mock": "vite --open --mode mock",
     "dev": "vite --open --mode development",
     "build:type": "vue-tsc --noEmit",
-    "build:mockSite": "vue-tsc --noEmit && vite build --mode mockSite",
+    "build:mockSite": "vue-tsc --noEmit && vite build --mode mockSite && node scripts/insert-build-info.js",
     "build:site": "vue-tsc --noEmit && vite build --mode site",
     "preview": "vite preview",
     "lint": "eslint --ext .vue,.js,.jsx,.ts,.tsx ./ --max-warnings 0",
